nacos.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: nacos
    app: nacos
  name: nacos
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nacos
  template:
    metadata:
      labels:
        io.kompose.service: nacos
        app: nacos
    spec:
      containers:
      - env:
        - name: MODE
          value: standalone
        - name: PREFER_HOST_MODE
          value: hostname
        image: reg.docker-io.com/server/nacos:new
        name: nacos-standalone
        ports:
        - containerPort: 8848
        resources: {}
        volumeMounts:
        - mountPath: /home/nacos/logs
          name: nacos-logs
      restartPolicy: Always
      volumes:
      - name: nacos-claim0
        persistentVolumeClaim:
          claimName: nacos-claim0
