qbittorrent.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.7.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: qbittorrent
  name: qbittorrent
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: qbittorrent
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: qbittorrent
    spec:
      containers:
      - env:
        - name: PGID
          value: "1000"
        - name: PUID
          value: "1000"
        - name: TZ
          value: Asia/Shanghai
        - name: UMASK_SET
          value: "022"
        - name: WEBUI_PORT
          value: "8080"
        image: linuxserver/qbittorrent:latest
        imagePullPolicy: IfNotPresent
        name: qbittorrent
        ports:
        - containerPort: 6881
        - containerPort: 6881
          protocol: UDP
        - containerPort: 8080
        resources: {}
        volumeMounts:
          - mountPath: /config
            name: qbittorrent-config
          - mountPath: /downloads
            name: qbittorrent-downloads
      nodeName: phicomm
      restartPolicy: Always
      volumes:
        - name:  qbittorrent-config
          hostPath:
            path: /app/qbittorrent/appdata
        - name:  qbittorrent-downloads
          hostPath:
            path: /app/qbittorrent/downloads
status: {}
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.7.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: qbittorrent
  name: qbittorrent
spec:
  ports:
  - name: "6881"
    port: 6881
    protocol: UDP
    targetPort: 6881
  - name: "8080"
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    io.kompose.service: qbittorrent
status:
  loadBalancer: {}
