traefik.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-web-ui
  namespace: kube-system
spec:
  selector:
    app: traefik-ingress-lb
  ports:
  - name: web
    port: 80
    protocol: TCP
    targetPort: 8080
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-web-ui
  namespace: kube-system
spec:
  rules:
  - host: traefik.docker-io.com
    http:
        paths:
        - backend:
            serviceName: traefik-web-ui
            servicePort: web
          path: /
